--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SamsungNormalAnnualProject">
-        <activity android:name=".SelectGenderActivity"></activity>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".SelectGenderActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
