--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.SamsungNormalAnnualProject">
         <activity android:name=".ViewingNominationsActvity"></activity>
         <activity android:name=".WhatKindOfPeopleLookinFor" />
