--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.SamsungNormalAnnualProject">
-        <activity android:name=".ViewingNominationsActvity"></activity>
+        android:theme="@style/Theme.SamsungNormalAnnualProject"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ViewingNominationsActvity" />
         <activity android:name=".WhatKindOfPeopleLookinFor" />
         <activity android:name=".BaseActivity" />
         <activity android:name=".SignUpForm" />
