регистрация отточена и все работает нормально, сейчас займусь зополнением данных о пользователях

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SamsungNormalAnnualProject"
         android:usesCleartextTraffic="true">
+        android:theme="@android:style/Theme.NoDisplay"
         <activity android:name=".UserDataActivity"></activity>
         <activity android:name=".ViewingNominationsActvity" />
         <activity android:name=".WhatKindOfPeopleLookinFor" />
