добавил боттом меню и много чего еще

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SamsungNormalAnnualProject"
         android:usesCleartextTraffic="true">
-        android:theme="@android:style/Theme.NoDisplay"
-        <activity android:name=".UserDataActivity"></activity>
+        <activity android:name=".BottomMenu"></activity>
+        <activity android:name=".UserDataActivity" />
         <activity android:name=".ViewingNominationsActvity" />
         <activity android:name=".WhatKindOfPeopleLookinFor" />
         <activity android:name=".BaseActivity" />
