--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 //    testImplementation("junit:junit:4.12")
 //    testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
 
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
