добавил все вроде остались только сообщения да лайки

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SamsungNormalAnnualProject"
         android:usesCleartextTraffic="true">
-        <activity android:name=".UploadImageActivity"></activity>
+        <activity android:name=".UploadImageActivity" />
         <activity android:name=".BottomMenu" />
         <activity android:name=".UserDataActivity" />
         <activity android:name=".ViewingNominationsActvity" />
