--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,18 +33,11 @@ android {
 }
 
 dependencies {
-    // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-
-    // Junit
-//    testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.0")
-//    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
-//
-//    // to run JUnit 3/4 tests:
-//    testImplementation("junit:junit:4.12")
-//    testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
-
+    implementation 'com.squareup.retrofit2:retrofit:2.0.1'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.1.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'androidx.appcompat:appcompat:1.2.0'
