--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'org.apache.commons:commons-io:1.3.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     implementation ('io.socket:socket.io-client:2.0.0') {
